[package]
name = "thisvk"
description = "VK API trait"
version = "0.2.2"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vk_method = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
